[gd_scene load_steps=7 format=3 uid="uid://7vgu60ngymtx"]

[ext_resource type="Script" path="res://Global Stuff/pause_screen.gd" id="1_dhms2"]
[ext_resource type="Texture2D" uid="uid://diuxd5rc4vjvb" path="res://Global Stuff/pausescreen.png" id="1_oan5v"]
[ext_resource type="AudioStream" uid="uid://7ltwu5qw3dj0" path="res://Global Stuff/Resume 2.wav" id="3_7keti"]
[ext_resource type="AudioStream" uid="uid://1logh1npmryr" path="res://Global Stuff/Settings 1.wav" id="4_x1vju"]
[ext_resource type="AudioStream" uid="uid://pd561tyj4poh" path="res://Global Stuff/Exit 1.wav" id="5_ike53"]
[ext_resource type="AudioStream" uid="uid://be18p5jcby6xs" path="res://Global Stuff/Paused Game 1.wav" id="6_q4jky"]

[node name="pauseScreen" type="Node2D"]
process_mode = 3
z_index = 2
script = ExtResource("1_dhms2")

[node name="TextureRect" type="TextureRect" parent="."]
z_index = 1
offset_left = 696.0
offset_top = 227.0
offset_right = 1257.0
offset_bottom = 788.0
texture = ExtResource("1_oan5v")

[node name="Resume" type="LinkButton" parent="TextureRect"]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.022
offset_left = 48.0
offset_top = 21.0
offset_right = 501.658
offset_bottom = 172.0

[node name="Settings" type="LinkButton" parent="TextureRect"]
layout_mode = 0
offset_left = 49.0
offset_top = 194.0
offset_right = 520.0
offset_bottom = 343.0

[node name="exit" type="LinkButton" parent="TextureRect"]
layout_mode = 0
offset_left = 40.0
offset_top = 362.0
offset_right = 517.0
offset_bottom = 535.0

[node name="Resume" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_7keti")

[node name="Settings" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_x1vju")

[node name="Exit" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_ike53")

[node name="PausedGame" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_q4jky")
autoplay = true

[connection signal="mouse_entered" from="TextureRect/Resume" to="." method="_on_resume_mouse_entered"]
[connection signal="pressed" from="TextureRect/Resume" to="." method="_on_resume_pressed"]
[connection signal="mouse_entered" from="TextureRect/Settings" to="." method="_on_settings_mouse_entered"]
[connection signal="mouse_entered" from="TextureRect/exit" to="." method="_on_exit_mouse_entered"]
[connection signal="pressed" from="TextureRect/exit" to="." method="_on_exit_pressed"]
